--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "\"# entertainment-me\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "setupdb": "node config/SetupDB.js",
+    "dev": "cross-env NODE_ENV='development' npx nodemon bin/http.js",
+    "start": "node bin/http.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.0.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.34.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20"
   }
 }
